{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 288,
  "lineage": "0ca100b8-b8a6-5bec-0fc9-39f8148f2d7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0df546f3b05f34c18",
            "domain": "vpc",
            "id": "eipalloc-0ab35ffff8ae521c4",
            "network_interface": "eni-045504c1ff858b984",
            "private_dns": "ip-10-0-192-72.us-west-2.compute.internal",
            "private_ip": "10.0.192.72",
            "public_dns": "ec2-52-36-179-92.us-west-2.compute.amazonaws.com",
            "public_ip": "52.36.179.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "wuzinit NAT EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wuzinit_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ef9b759475b1182d",
            "owner_id": "238754394093",
            "tags": {
              "Name": "wuzinit igw"
            },
            "vpc_id": "vpc-081b9229dad9b7cc1"
          },
          "dependencies": [
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "wuzinit_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab35ffff8ae521c4",
            "id": "nat-076da25e5a7db16a8",
            "network_interface_id": "eni-045504c1ff858b984",
            "private_ip": "10.0.192.72",
            "public_ip": "52.36.179.92",
            "subnet_id": "subnet-00bc0028d8c40085a",
            "tags": {
              "Environment": "production",
              "Name": "wuzinit NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.wuzinit_public_subnet",
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wuzinit_igw_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0262e173e260daab9",
            "owner_id": "238754394093",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef9b759475b1182d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "wuzinit"
            },
            "vpc_id": "vpc-081b9229dad9b7cc1"
          },
          "dependencies": [
            "aws_internet_gateway.wuzinit_igw",
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wuzinit_nat_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-004e8a133e04c64b7",
            "owner_id": "238754394093",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-076da25e5a7db16a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "wuzinit"
            },
            "vpc_id": "vpc-081b9229dad9b7cc1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.wuzinit_nat",
            "aws_subnet.wuzinit_public_subnet",
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058dc9fe35f316c2f",
            "route_table_id": "rtb-004e8a133e04c64b7",
            "subnet_id": "subnet-039cadb2b70dc6ee1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.wuzinit_nat",
            "aws_route_table.wuzinit_nat_route_table",
            "aws_subnet.wuzinit_private_subnet_a",
            "aws_subnet.wuzinit_public_subnet",
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069647765ff4f6af6",
            "route_table_id": "rtb-004e8a133e04c64b7",
            "subnet_id": "subnet-057c30136acddb0df"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.wuzinit_nat",
            "aws_route_table.wuzinit_nat_route_table",
            "aws_subnet.wuzinit_private_subnet_b",
            "aws_subnet.wuzinit_public_subnet",
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db94631a9d409ab6",
            "route_table_id": "rtb-0262e173e260daab9",
            "subnet_id": "subnet-00bc0028d8c40085a"
          },
          "dependencies": [
            "aws_internet_gateway.wuzinit_igw",
            "aws_route_table.wuzinit_igw_route_table",
            "aws_subnet.wuzinit_public_subnet",
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wuzinit_lambda_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238754394093:security-group/sg-0095bf88149edf96d",
            "description": "Allow all inbound/outbound traffic from within the private subnet ranges",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0095bf88149edf96d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lambda_sg",
            "name_prefix": null,
            "owner_id": "238754394093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "wuzinit lambda sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-081b9229dad9b7cc1"
          },
          "dependencies": [
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wuzinit_private_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238754394093:subnet/subnet-039cadb2b70dc6ee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/18",
            "id": "subnet-039cadb2b70dc6ee1",
            "map_public_ip_on_launch": false,
            "owner_id": "238754394093",
            "tags": {
              "Environment": "production",
              "Name": "wuzinit private"
            },
            "vpc_id": "vpc-081b9229dad9b7cc1"
          },
          "dependencies": [
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wuzinit_private_subnet_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238754394093:subnet/subnet-057c30136acddb0df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.64.0/18",
            "id": "subnet-057c30136acddb0df",
            "map_public_ip_on_launch": false,
            "owner_id": "238754394093",
            "tags": {
              "Environment": "production",
              "Name": "wuzinit private"
            },
            "vpc_id": "vpc-081b9229dad9b7cc1"
          },
          "dependencies": [
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wuzinit_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238754394093:subnet/subnet-00bc0028d8c40085a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.192.0/24",
            "id": "subnet-00bc0028d8c40085a",
            "map_public_ip_on_launch": false,
            "owner_id": "238754394093",
            "tags": {
              "Environment": "production",
              "Name": "wuzinit DNZ"
            },
            "vpc_id": "vpc-081b9229dad9b7cc1"
          },
          "dependencies": [
            "aws_vpc.wuzinit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wuzinit_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:238754394093:vpc/vpc-081b9229dad9b7cc1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b7479a79dfdac5e",
            "default_route_table_id": "rtb-0ec02bb5e13ad334e",
            "default_security_group_id": "sg-09a3a659aca6038c7",
            "dhcp_options_id": "dopt-293a9251",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-081b9229dad9b7cc1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ec02bb5e13ad334e",
            "owner_id": "238754394093",
            "tags": {
              "Environment": "production",
              "Name": "wuzinit"
            }
          }
        }
      ]
    }
  ]
}